# OPlus_EDL_Toolkit

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  crowdin-translations-progress.yml
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  res\cmd.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command_util.rs  command_worker.rs  edl_loader_util.rs  file_util.rs  firehose_service.rs  gpt_parser.rs  lib.rs  main.rs  super_image_creater.rs  xml_file_util.rs
src-tauri/src/qdl/: firehose.rs  mod.rs  parsers.rs  sahara.rs  serial.rs  types.rs
src-tauri/tools/: QSaharaServer  fh_loader  simg2img
src/composables/: useAdvancedPanelEventHandler.js  useConfigPanelEventHandler.js  useEdlPanelEventHandler.js  useEventListener.js  useOperationEventHandler.js  useRebootPanelEventHandler.js  useSettingPanelEventHandler.js  useStatusPanelEventHandler.js  useTableEventHandler.js
src/locales/: en.js  ru.js  zh_CN.js  zh_TW.js
