[package]
name = "oplus_edl_toolkit"
version = "0.8.1"
description = "Oplus EDL Toolkit"
authors = ["SnowWolf725"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "edl_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
anstream = "0.6.15"
bincode = "1.3.3"
byteorder = "1.4"
encoding = "0.2"
glob = "0.3"
indexmap = "2.5.0"
itertools = "0.14.0"
lazy_static = "1.4.0"
owo-colors = "4.1.0"
pbr = "1.1.1"
quick-xml = { version = "0.38.4", features = ["serde", "serialize"] }  
regex = "1.0"
rusb = "0.9.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
serial2 = "0.2.28"
serialport = "4.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] } 
xmltree = { version = "0.11.0", features = ["attribute-order"] }
